Include datalad-dataverse references in main.tex

--- a/main.tex
+++ b/main.tex
@@ -75,6 +75,7 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 % Bibliography & figures
 \graphicspath{{images/}}
 \addbibresource{\subfix{references/references.bib}}
+\addbibresource{\subfix{references/datalad-dataverse.bib}}
 
 \begin{document}
 
