--- a/main.tex
+++ b/main.tex
@@ -74,10 +74,13 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 
 % Bibliography & figures
 \graphicspath{{images/}}
-\addbibresource{\subfix{references/references.bib}}
+% \addbibresource{\subfix{references/references.bib}}
+\addbibresource{\subfix{references/VASOMOSAIC.bib}}
 
 \begin{document}
 
-\subfile{summaries/template.tex}
+% \subfile{summaries/template.tex}
+\subfile{summaries/VASOMOSAIC.tex}
+
 
 \end{document}
