--- a/main.tex
+++ b/main.tex
@@ -75,9 +75,11 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 % Bibliography & figures
 \graphicspath{{images/}}
 \addbibresource{\subfix{references/references.bib}}
+\addbibresource{\subfix{references/rba.bib}}
 
 \begin{document}
 
 \subfile{summaries/template.tex}
+\subfile{summaries/rba.tex}
 
 \end{document}
