Exploding brains text

--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,7 @@
 % License
 %--------------------------------------------
 \usepackage{ccicons}
-\usepackage[type={CC},modifier={by-nc-sa},version={4.0},imagemodifier={-eu}]{doclicense}
+\usepackage[type={CC},modifier={by-nc-sa},version={4.0},magemodifier={-eu}]{doclicense}
 
 %--------------------------------------------
 % Graphics
@@ -74,10 +74,12 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 
 % Bibliography & figures
 \graphicspath{{images/}}
-\addbibresource{\subfix{references/references.bib}}
+% \addbibresource{\subfix{references/references.bib}}
+\addbibresource{\subfix{references/exploding_brains.bib}}
 
 \begin{document}
 
-\subfile{summaries/template.tex}
+% \subfile{summaries/template.tex}
+\subfile{summaries/exploding_brains.tex}
 
 \end{document}
