--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,7 @@
 % License
 %--------------------------------------------
 \usepackage{ccicons}
-\usepackage[type={CC},modifier={by-nc-sa},version={4.0},magemodifier={-eu}]{doclicense}
+\usepackage[type={CC},modifier={by-nc-sa},version={4.0},imagemodifier={-eu}]{doclicense}
 
 %--------------------------------------------
 % Graphics
