Fix rendering of references
- Add german babel to be able to render umlaut
- Fix syntax for month

--- a/references/rba.bib
+++ b/references/rba.bib
@@ -73,7 +73,7 @@
   doi = {10.7717/peerj-cs.55},
   url = {https://doi.org/10.7717/peerj-cs.55},
   year  = {2016},
-  month = {apr},
+  month = apr,
   publisher = {{PeerJ}},
   volume = {2},
   pages = {e55},
@@ -151,7 +151,6 @@ Publisher: Nature Publishing Group},
         journal = {Human Brain Mapping},
         author = {Waller, Lea and Erk, Susanne and Pozzi, Elena and Toenders, Yara J. and Haswell, Courtney C. and Büttner, Marc and Thompson, Paul M. and Schmaal, Lianne and Morey, Rajendra A. and Walter, Henrik and Veer, Ilya M.},
         year = {2022},
-        note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/hbm.25829},
         keywords = {fMRI, harmonization, image analysis, meta-analysis pipeline, open source, reproducibility},
         pages = {2727--2742},
         file = {Full Text PDF:C\:\\Users\\Lea\\Zotero\\storage\\5RTPFA9A\\Waller et al. - 2022 - ENIGMA HALFpipe Interactive, reproducible, and ef.pdf:application/pdf;Snapshot:C\:\\Users\\Lea\\Zotero\\storage\\CGJF46TW\\hbm.html:text/html},
