--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,7 @@
 %--------------------------------------------
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage[spanish,british]{babel}
+\usepackage[spanish,german,british]{babel}
 
 %--------------------------------------------
 % License
@@ -19,6 +19,7 @@
 \usepackage{graphicx}
 % \usepackage[pdftex]{graphicx}
 \usepackage{xcolor} % Required for specifying colors by name
+\usepackage{subcaption}
 
 %--------------------------------------------
 % Hyperlinks
