--- a/summaries/template.tex
+++ b/summaries/template.tex
@@ -4,7 +4,7 @@
 
 \section{Title of Summary}
 
-\authors{Author 1\textsuperscript{1}, Author 2\textsuperscript{2}, Author 3\textduperscript{1, 2}, ...}
+\authors{Author 1\textsuperscript{1}, Author 2\textsuperscript{2}, Author 3\textsuperscript{1, 2}, ...}
 
 \affiliations{1. Affiliation 1, 2. Affiliation 2, ...}
 
@@ -29,7 +29,7 @@ Finally, package everything and send it over via email, or open a PR to the git 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.5\textwidth]{test.png}
-	\caption{1 figure max, 250 characters for caption. Please use a specific name for your figure (avoid \emph{figure_1} and similar names).)}
+	\caption{1 figure max, 250 characters for caption. Please use a specific name for your figure (avoid \emph{figure\char`_1} and similar names).)}
 	% Add a label to reference in text. Make it specific!
 	\label{fig:test}
 \end{figure}
