Add missing package `enumitem` to allow roman numerals for enumerations

--- a/main.tex
+++ b/main.tex
@@ -63,6 +63,7 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 %--------------------------------------------
 % Formatting
 %--------------------------------------------
+\usepackage{enumitem}
 \newcommand{\authors}[1]{\emph{\footnotesize #1}}
 \newcommand{\affiliations}[1]{\\ \emph{\scriptsize #1} \\}
 
