Fix bibliography for each section

--- a/main.tex
+++ b/main.tex
@@ -48,7 +48,7 @@
 %--------------------------------------------
 \usepackage{caption,cleveref}
 \newcommand{\creflastconjunction}{, and\nobreakspace}
-\usepackage[style=apa6,sorting=nyt,refsegment=chapter,uniquename=false]{biblatex}
+\usepackage[style=apa6,sorting=nyt,refsection=section,uniquename=false]{biblatex}
 \defbibheading{bibempty}{}
 
 \newcommand\BibTeX{{\rmfamily B\kern-.05em \textsc{i\kern-.025em b}\kern-.08em
